--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         body {
             font-family: 'Courier New', Courier, monospace;
-            background-image: url("{{ module_asset_url('IMG_0882-modified.jpg') }}");
+            background-image: url("IMG_0882-modified.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
