added more pages

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
         <h1>Drywall</h1>
         <div class="menu">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contactus.html">Contact</a></li>
             </ul>
         </div>
     </div>
