--- a/contactus.html
+++ b/contactus.html
@@ -11,7 +11,12 @@
             padding: 0;
             height: 100%;
         }
-
+         h1 {
+            font-size: 90px;
+            color: white;
+            margin: 0 0 40px 0; 
+            visibility: hidden;
+        }
         body {
             font-family: 'Courier New', Courier, monospace;
             background-image: url("IMG_0882-modified.jpg");
@@ -109,6 +114,7 @@
 
 <body>
     <!-- Left-aligned vertical menu -->
+     <h1 class="site-header">Drywall</h1>
     <div class="menu">
         <ul>
             <li><a href="index.html">Home</a></li>
