--- a/contactus.html
+++ b/contactus.html
@@ -11,6 +11,7 @@
             padding: 0;
             height: 100%;
         }
+        
          h1 {
             font-size: 90px;
             color: white;
@@ -99,7 +100,9 @@
             .contact-box {
                 padding: 30px;
             }
-
+            h1 {
+                font-size: 60px;
+            }
             .contact-box h1 {
                 font-size: 40px;
             }
@@ -114,8 +117,8 @@
 
 <body>
     <!-- Left-aligned vertical menu -->
-     <h1 class="site-header">Drywall</h1>
     <div class="menu">
+        <h1 class="site-header">Drywall</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="news.html">News</a></li>
