--- a/contactus.html
+++ b/contactus.html
@@ -11,13 +11,15 @@
             padding: 0;
             height: 100%;
         }
-        
-         h1 {
+
+        .site-header {
             font-size: 90px;
             color: white;
-            margin: 0 0 40px 0; 
+
+            margin: 0 0 40px 0;
             visibility: hidden;
         }
+
         body {
             font-family: 'Courier New', Courier, monospace;
             background-image: url("IMG_0882-modified.jpg");
@@ -32,12 +34,19 @@
         }
 
         /* Left-aligned vertical menu */
-        /* Left-aligned vertical menu */
+        .menu {
+            position: fixed;
+            /* stays pinned left */
+            top: 20px;
+            left: 20px;
+        }
+
         .menu ul {
             list-style: none;
             padding: 0;
             display: flex;
-            flex-direction: column; /* vertical */
+            flex-direction: column;
+            /* vertical */
         }
 
         .menu ul li {
@@ -54,9 +63,7 @@
             text-decoration: underline;
         }
 
-
-
-        /* Centered white contact box */
+        /* White box stays centered */
         .contact-box {
             background-color: rgba(255, 255, 255, 0.95);
             padding: 50px;
@@ -66,22 +73,6 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
 
-        /* Contact heading */
-        .contact-box h1 {
-            font-family: 'Courier New', Courier, monospace;
-            font-size: 60px;
-            color: black;
-            margin: 0 0 20px 0;
-        }
-
-        /* Contact content */
-        .contact-box p,
-        .contact-box a {
-            font-size: 18px;
-            color: black;
-            line-height: 1.6;
-            text-decoration: none;
-        }
 
         .contact-box a:hover {
             text-decoration: underline;
@@ -92,9 +83,11 @@
             .contact-box {
                 padding: 30px;
             }
+
             h1 {
                 font-size: 60px;
             }
+
             .contact-box h1 {
                 font-size: 40px;
             }
