--- a/contactus.html
+++ b/contactus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Drywall - Contact</title>
+    <title>Drywall</title>
     <style>
         html, body {
             margin: 0;
@@ -12,7 +12,7 @@
 
         body {
             font-family: 'Courier New', Courier, monospace;
-            background-image: url("IMG_0882-modified.jpg"); /* Replace with your image path */
+            background-image: url("IMG_0882-modified.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -22,7 +22,7 @@
             position: relative;
         }
 
-        /* Container for menu and header */
+        /* Container pinned top-left */
         .container {
             position: absolute;
             top: 20px;
@@ -32,18 +32,18 @@
             align-items: flex-start;
         }
 
-        .container h1 {
+        h1 {
             font-size: 90px;
             color: white;
             margin: 0 0 40px 0;
         }
 
-        /* Menu styles (matching home page) */
+        /* Menu styles */
         .menu ul {
             list-style: none;
             padding: 0;
             display: flex;
-            flex-direction: column;
+            flex-direction: column; /* vertical */
         }
 
         .menu ul li {
@@ -60,65 +60,23 @@
             text-decoration: underline;
         }
 
-        /* Contact box in center */
-        .contact-box {
-            background-color: rgba(255, 255, 255, 0.95);
-            padding: 50px;
-            max-width: 500px;
-            width: 90%;
-            text-align: left;
-            box-shadow: 0 0 15px rgba(0,0,0,0.3);
-        }
-
-        .contact-box h2 {
-            font-size: 60px;
-            margin: 0 0 20px 0;
-            color: black;
-        }
-
-        .contact-box p,
-        .contact-box a {
-            font-size: 18px;
-            color: black;
-            line-height: 1.6;
-            text-decoration: none;
-        }
-
-        .contact-box a:hover {
-            text-decoration: underline;
-        }
-
         /* Responsive */
         @media screen and (max-width: 768px) {
-            .container {
-                left: 20px;
+            h1 {
+                font-size: 60px;
             }
 
-            .container h1 {
-                font-size: 60px;
+            .container {
+                left: 20px;
             }
 
             .menu ul li {
                 padding: 12px 0;
             }
-
-            .contact-box {
-                padding: 30px;
-            }
-
-            .contact-box h2 {
-                font-size: 40px;
-            }
-
-            .contact-box p,
-            .contact-box a {
-                font-size: 16px;
-            }
         }
     </style>
 </head>
 <body>
-    <!-- Same header/menu as home -->
     <div class="container">
         <h1>Drywall</h1>
         <div class="menu">
@@ -129,19 +87,6 @@
                 <li><a href="contactus.html">Contact</a></li>
             </ul>
         </div>
-    </div>
-
-    <!-- Centered white contact box -->
-    <div class="contact-box">
-        <h2>Contact Us</h2>
-        <p>Email: <a href="mailto:contact@drywallband.com">contact@drywallband.com</a></p>
-        <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-        <p>Address: 123 Main St, City, State</p>
-        <p>Follow us on social media:</p>
-        <p>
-            <a href="#">Instagram</a> | 
-            <a href="#">Email</a>
-        </p>
     </div>
 </body>
 </html>
