--- a/contactus.html
+++ b/contactus.html
@@ -1,143 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Drywall - Contact</title>
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
+<meta charset="UTF-8">
+<title>Drywall - Contact</title>
+<style>
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 
-        body {
-            font-family: 'Courier New', Courier, monospace;
-            background-image: url("IMG_0882-modified.jpg");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            display: flex;
-            align-items: center;       /* vertical centering */
-            justify-content: flex-start; /* horizontal: start from left */
-            position: relative;
-        }
+body {
+  font-family: 'Courier New', Courier, monospace;
+  background-image: url("IMG_0882-modified.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: relative;
+}
 
-        /* Container for menu and header */
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            padding-left: 40px;
-        }
+/* Container for menu and header */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 40px 20px 0 20px;
+}
 
-        h1 {
-            font-size: 90px;
-            color: white;
-            margin: 0 0 40px 0; /* space below for menu */
-        }
+h1 {
+  font-size: 90px;
+  color: white;
+  margin: 0 0 20px 0; /* space below for menu */
+}
 
-        /* Menu styles */
-        .menu ul {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            flex-direction: column; /* vertical */
-        }
+/* Menu styles */
+.menu ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
 
-        .menu ul li {
-            padding: 15px 0;
-        }
+.menu ul li {
+  padding: 15px 0;
+}
 
-        .menu ul li a {
-            color: white;
-            text-decoration: none;
-            display: block;
-        }
+.menu ul li a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
 
-        .menu ul li a:hover {
-            text-decoration: underline;
-        }
+.menu ul li a:hover {
+  text-decoration: underline;
+}
 
-        /* Centered white contact box */
-        .contact-box {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(255, 255, 255, 0.95);
-            padding: 50px;
-            max-width: 500px;
-            width: 90%;
-            text-align: left;
-            box-shadow: 0 0 15px rgba(0,0,0,0.3);
-        }
+/* Centered white contact box */
+.contact-box {
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 50px;
+  max-width: 500px;
+  width: 90%;
+  text-align: left;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  margin: 40px auto; /* allow vertical stacking */
+}
 
-        .contact-box h1 {
-            font-size: 60px;
-            margin: 0 0 20px 0;
-            color: black;
-        }
+.contact-box h1 {
+  font-size: 60px;
+  margin: 0 0 20px 0;
+  color: black;
+}
 
-        .contact-box p,
-        .contact-box a {
-            font-size: 18px;
-            color: black;
-            line-height: 1.6;
-            text-decoration: none;
-        }
+.contact-box p,
+.contact-box a {
+  font-size: 18px;
+  color: black;
+  line-height: 1.6;
+  text-decoration: none;
+}
 
-        .contact-box a:hover {
-            text-decoration: underline;
-        }
+.contact-box a:hover {
+  text-decoration: underline;
+}
 
-        /* Responsive adjustments */
-        @media screen and (max-width: 768px) {
-            h1 {
-                font-size: 60px;
-            }
-            .container {
-                padding-left: 20px;
-            }
-            .menu ul li {
-                padding: 12px 0;
-            }
-            .contact-box {
-                padding: 30px;
-            }
-            .contact-box h1 {
-                font-size: 40px;
-            }
-            .contact-box p,
-            .contact-box a {
-                font-size: 16px;
-            }
-        }
-    </style>
+/* Mobile adjustments */
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 50px;
+  }
+  .container {
+    padding: 20px 15px 0 15px;
+  }
+  .menu ul li {
+    padding: 10px 0;
+  }
+  .contact-box {
+    padding: 30px;
+    margin: 20px auto; /* maintain spacing */
+  }
+  .contact-box h1 {
+    font-size: 40px;
+  }
+  .contact-box p,
+  .contact-box a {
+    font-size: 16px;
+  }
+}
+</style>
 </head>
 <body>
-    <div class="container">
-        <h1>Drywall</h1>
-        <div class="menu">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contactus.html">Contact</a></li>
-            </ul>
-        </div>
-    </div>
+<div class="container">
+  <h1>Drywall</h1>
+  <div class="menu">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contactus.html">Contact</a></li>
+    </ul>
+  </div>
+</div>
 
-    <!-- Centered contact box -->
-    <div class="contact-box">
-        <h1>Contact Us</h1>
-        <p>Email: <a href="mailto:contact@drywallband.com">contact@drywallband.com</a></p>
-        <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
-        <p>Address: 123 Main St, City, State</p>
-        <p>Follow us on social media:</p>
-        <p>
-            <a href="#">Instagram</a> |
-            <a href="#">Email</a>
-        </p>
-    </div>
+<div class="contact-box">
+  <h1>Contact Us</h1>
+  <p>Email: <a href="mailto:contact@drywallband.com">contact@drywallband.com</a></p>
+  <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+  <p>Address: 123 Main St, City, State</p>
+  <p>Follow us on social media:</p>
+  <p>
+    <a href="#">Instagram</a> |
+    <a href="#">Email</a>
+  </p>
+</div>
 </body>
 </html>
