--- a/contactus.html
+++ b/contactus.html
@@ -8,38 +8,40 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
+  width: 100%;
+  font-family: 'Courier New', Courier, monospace;
 }
 
+/* Background */
 body {
-  font-family: 'Courier New', Courier, monospace;
   background-image: url("IMG_0882-modified.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  position: relative;
+  flex-direction: column;
 }
 
-/* Container for menu and header */
+/* Container for menu + header */
 .container {
+  padding: 40px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 40px 20px 0 20px;
 }
 
-h1 {
+/* Header */
+.container h1 {
   font-size: 90px;
   color: white;
-  margin: 0 0 20px 0; /* space below for menu */
+  margin: 0 0 20px 0;
 }
 
-/* Menu styles */
+/* Menu */
 .menu ul {
   list-style: none;
   padding: 0;
+  margin: 0;
   display: flex;
   flex-direction: column;
 }
@@ -51,28 +53,27 @@ h1 {
 .menu ul li a {
   color: white;
   text-decoration: none;
-  display: block;
 }
 
 .menu ul li a:hover {
   text-decoration: underline;
 }
 
-/* Centered white contact box */
+/* Contact box */
 .contact-box {
-  background-color: rgba(255, 255, 255, 0.95);
-  padding: 50px;
+  background-color: rgba(255,255,255,0.95);
   max-width: 500px;
   width: 90%;
+  margin: 40px auto; /* centers horizontally and adds spacing from top */
+  padding: 50px;
   text-align: left;
   box-shadow: 0 0 15px rgba(0,0,0,0.3);
-  margin: 40px auto; /* allow vertical stacking */
 }
 
 .contact-box h1 {
   font-size: 60px;
-  margin: 0 0 20px 0;
   color: black;
+  margin: 0 0 20px 0;
 }
 
 .contact-box p,
@@ -87,20 +88,20 @@ h1 {
   text-decoration: underline;
 }
 
-/* Mobile adjustments */
+/* Responsive adjustments */
 @media screen and (max-width: 768px) {
-  h1 {
-    font-size: 50px;
-  }
   .container {
-    padding: 20px 15px 0 15px;
+    padding: 20px;
+  }
+  .container h1 {
+    font-size: 50px;
   }
   .menu ul li {
     padding: 10px 0;
   }
   .contact-box {
     padding: 30px;
-    margin: 20px auto; /* maintain spacing */
+    margin: 20px auto;
   }
   .contact-box h1 {
     font-size: 40px;
@@ -113,6 +114,8 @@ h1 {
 </style>
 </head>
 <body>
+
+<!-- Menu + Header -->
 <div class="container">
   <h1>Drywall</h1>
   <div class="menu">
@@ -125,16 +128,15 @@ h1 {
   </div>
 </div>
 
+<!-- Contact Box -->
 <div class="contact-box">
   <h1>Contact Us</h1>
   <p>Email: <a href="mailto:contact@drywallband.com">contact@drywallband.com</a></p>
   <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
   <p>Address: 123 Main St, City, State</p>
   <p>Follow us on social media:</p>
-  <p>
-    <a href="#">Instagram</a> |
-    <a href="#">Email</a>
-  </p>
+  <p><a href="#">Instagram</a> | <a href="#">Email</a></p>
 </div>
+
 </body>
 </html>
