--- a/contactus.html
+++ b/contactus.html
@@ -12,7 +12,7 @@ html, body {
   font-family: 'Courier New', Courier, monospace;
 }
 
-/* Desktop background */
+/* Background */
 body {
   background-image: url("IMG_0882-modified.jpg");
   background-size: cover;
@@ -23,13 +23,13 @@ body {
   align-items: flex-start;
 }
 
-/* Header + menu container (desktop alignment identical to Home) */
+/* Header + Menu (exact same as Home) */
 .container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding-left: 40px;
-  padding-top: 40px; /* keeps menu + header at Home alignment */
+  padding-top: 40px; /* maintains same top spacing as Home */
 }
 
 .container h1 {
@@ -60,28 +60,29 @@ body {
   text-decoration: underline;
 }
 
-/* Contact box: horizontally centered, below menu without affecting desktop menu alignment */
+/* Contact box */
 .contact-box {
+  background-color: rgba(255,255,255,0.95);
   max-width: 500px;
   width: 90%;
-  margin: 40px auto 0 auto; /* horizontal centering; vertical spacing below menu */
   padding: 50px;
-  background-color: rgba(255,255,255,0.95);
-  box-shadow: 0 0 15px rgba(0,0,0,0.3);
   text-align: left;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  align-self: center; /* centers horizontally without moving menu */
+  margin-top: 60px; /* spacing below menu */
 }
 
 .contact-box h1 {
   font-size: 60px;
-  color: black;
   margin: 0 0 20px 0;
+  color: black;
 }
 
 .contact-box p,
 .contact-box a {
   font-size: 18px;
-  color: black;
   line-height: 1.6;
+  color: black;
   text-decoration: none;
 }
 
@@ -89,17 +90,18 @@ body {
   text-decoration: underline;
 }
 
-/* Mobile-only adjustments */
+/* Mobile adjustments only */
 @media screen and (max-width: 768px) {
   .container h1 {
-    font-size: 50px; /* shrink header */
+    font-size: 50px;
   }
   .menu ul li {
-    padding: 10px 0; /* shrink menu spacing */
+    padding: 10px 0;
   }
   .contact-box {
     padding: 30px;
-    margin-top: 20px; /* reduce vertical spacing for mobile */
+    margin-top: 30px; /* reduce spacing for mobile */
+    width: 95%;
   }
   .contact-box h1 {
     font-size: 40px;
@@ -113,7 +115,7 @@ body {
 </head>
 <body>
 
-<!-- Menu + Header (matches Home) -->
+<!-- Menu + Header -->
 <div class="container">
   <h1>Drywall</h1>
   <div class="menu">
