--- a/news.html
+++ b/news.html
@@ -187,7 +187,16 @@
             <p class="news-date">September 5, 2025</p>
             <p>We're hitting the road this fall! Join us on tour in a city near you. Tickets are on sale now. Check our <a href="#" target="_blank">tour page</a> for a full list of dates and to purchase tickets.</p>
         </div>
-        
+        <div class="news-item">
+            <h3>Drywall Announces Fall Tour Dates</h3>
+            <p class="news-date">September 5, 2025</p>
+            <p>We're hitting the road this fall! Join us on tour in a city near you. Tickets are on sale now. Check our <a href="#" target="_blank">tour page</a> for a full list of dates and to purchase tickets.</p>
+        </div>
+        <div class="news-item">
+            <h3>Drywall Announces Fall Tour Dates</h3>
+            <p class="news-date">September 5, 2025</p>
+            <p>We're hitting the road this fall! Join us on tour in a city near you. Tickets are on sale now. Check our <a href="#" target="_blank">tour page</a> for a full list of dates and to purchase tickets.</p>
+        </div>
     </div>
 </body>
 </html>
