--- a/news.html
+++ b/news.html
@@ -73,11 +73,9 @@
             width: 90%;
             box-sizing: border-box;
             text-align: left;
-            margin-left: 20%; /* Pushes the box to the right to clear the menu */
-            
-            /* ---- SCROLL BAR STYLES ---- */
-            max-height: 80vh; /* Limits the height of the box */
-            overflow-y: auto; /* Adds a vertical scroll bar when content exceeds height */
+            margin-left: 20%;
+            max-height: 80vh;
+            overflow-y: auto;
         }
         
         .content-box h2 {
@@ -121,6 +119,7 @@
                 flex-direction: column;
                 justify-content: flex-start;
                 padding: 2rem 0;
+                align-items: center;
             }
 
             .fixed-header-container {
@@ -134,7 +133,7 @@
                 margin-left: 5%;
                 margin-right: 5%;
                 width: 90%;
-                max-height: 60vh; /* Adjusts height for smaller screens */
+                max-height: 60vh;
             }
 
             h1 {
