--- a/news.html
+++ b/news.html
@@ -152,9 +152,10 @@
             .menu-toggle {
                 display: block;
                 position: fixed;
-                top: 20px;
+                top: 25px; /* Adjusted position */
                 left: 20px;
-                color: white;
+                color: black; /* Changed to black for visibility */
+                text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5); /* Added shadow for contrast */
                 font-size: 2rem;
                 cursor: pointer;
                 z-index: 101;
