--- a/news.html
+++ b/news.html
@@ -146,19 +146,19 @@
             }
 
             h1 {
-                font-size: 5rem;
+                font-size: 4rem; /* Adjusted font size for mobile */
             }
             
             .menu-toggle {
                 display: block;
                 position: fixed;
-                top: 25px; /* Adjusted position */
+                top: 25px;
                 left: 20px;
-                color: black; /* Changed to black for visibility */
-                text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5); /* Added shadow for contrast */
+                color: black;
+                text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
                 font-size: 2rem;
                 cursor: pointer;
-                z-index: 101;
+                z-index: 102; /* Ensures the button is on top of the menu */
                 user-select: none;
             }
 
